# linux-blurcam

./: README.md  pyproject.toml
scripts/: install.sh
src/linuxcam/: __init__.py  cli.py  config.py  daemon.py  models.py  segmentation.py  setup.py
