[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blurcam"
version = "1.0.0"
description = "Virtual webcam with AI background blur for Linux (GPU-accelerated with CUDA fallback)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Linux ARM64 Community"}
]
keywords = ["virtual-camera", "v4l2loopback", "webcam", "blur", "background", "arm64", "asahi", "raspberry-pi", "cuda", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "numpy>=1.26.0,<2",
    "opencv-python>=4.10.0",
    "onnxruntime-gpu>=1.26.0",
    "pyvirtualcam>=0.14.0",
    "huggingface-hub>=1.0.0",
    "inotify-simple>=2.0.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.20.0",
]
gpu = [
    "onnxruntime-gpu>=1.26.0",
]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
blurcam = "linuxcam.cli:main"
blurcam-setup = "linuxcam.setup:main"

[project.urls]
Homepage = "https://github.com/jolehuit/linux-blurcam"
Documentation = "https://github.com/jolehuit/linux-blurcam#readme"
Repository = "https://github.com/jolehuit/linux-blurcam.git"
Issues = "https://github.com/jolehuit/linux-blurcam/issues"

[tool.setuptools.packages.find]
where = ["src"]
